Update text and animation

--- a/client/index.html
+++ b/client/index.html
@@ -21,20 +21,17 @@
                 <button class="popup-button" onclick="closePopup()">x</button>
             </div>
             <div class="popup-content">
-                <video class="popup-animation" width="320" height="240" loop autoplay muted>
-                    <source src="img/words-selection.webm" type="video/webm">
+                <video class="popup-animation" width="350" height="240" loop autoplay muted>
+                    <source src="img/words.webm" type="video/webm">
                     Your browser does not support the video tag.
                 </video>
                 <div class="popup-text">
-                    Esta web es una máquina de ficción inspirada en los tapices de la obra <a
-                        href="https://www.museoreinasofia.es/coleccion/obra/txt-engine-wandering-words-txt-motor-palabras-errantes"
-                        target="_blank">TXT</a> de
-                    Ana
-                    Torfs y creada por equipoMotor. <br />
+                    Esta web es una máquina de ficción que permite crear recorridos por la Colección Permanente del
+                    Museo Reina Sofía en forma de episodios.
                     <br />
-                    Puedes crear un
-                    nuevo episodio de la exposición Vasos Comunicantes del Museo Reina Sofía seleccionando tres palabras
-                    del listado.
+                    <br />
+                    Estos episodios se generan seleccionando tres palabras del glosario, propuesto por las personas que
+                    integraron el proyecto equipoMotor.TXT durante 2022.
                 </div>
             </div>
         </div>
@@ -46,7 +43,7 @@
                 <ul class="menu--list">
                     <li class="menu--list__item">
                         <button class="menu--list__item-button" onclick="displayInfo('equipoMotor')">
-                            → qué fue equipoMotor TXT 2020
+                            → qué es equipoMotor
                         </button>
                     </li>
                     <li class="menu--list__item">
