--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="popup-content">
                 <video class="popup-animation" width="350" height="240" loop autoplay muted>
-                    <source src="img/words.webm" type="video/webm">
+                    <source src="media/words.webm" type="video/webm">
                     Your browser does not support the video tag.
                 </video>
                 <div class="popup-text">
