--- a/client/index.html
+++ b/client/index.html
@@ -63,7 +63,6 @@
                     </li>
                 </ul>
             </nav>
-            <img class="header-logo" src="./media/fertes-blanco.svg" alt="Logo Fertes">
         </header>
         <main class="main">
             <ul id="wordsWrapper" onclick="unselectMenuItems()"></ul>
@@ -88,7 +87,7 @@
                 <div id="aboutWrapper"></div>
             </article>
         </main>
-        <img class="footer-logo" src="./media/fertes-blanco.svg" alt="Logo Fertes">
+        <embed class="logo" src="./media/fertes.svg" alt="Logo Fertes">
     </div>
     <script type="text/javascript" src="./services.js"></script>
     <script type="text/javascript" src="./helpers.js"></script>
