fix logo styles

--- a/client/index.html
+++ b/client/index.html
@@ -87,7 +87,9 @@
                 <div id="aboutWrapper"></div>
             </article>
         </main>
-        <embed class="logo" src="./media/fertes.svg" alt="Logo Fertes">
+        <footer>
+            <img class="logo" src="./media/fertes.svg" alt="Logo Fertes">
+        </footer>
     </div>
     <script type="text/javascript" src="./services.js"></script>
     <script type="text/javascript" src="./helpers.js"></script>
